Tue Jul 15 15:58:24 BST 2008  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Sat Jul 12 16:47:11 BST 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.3-pre1.
	* po/man-db.pot, po/*.po: Update.

Sat Jul 12 16:43:07 BST 2008  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Start 2.5.3.

Sat Jul  5 11:33:16 BST 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080701.

Mon Jun  9 13:47:50 BST 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080601.

Mon Jun  9 09:31:04 BST 2008  Yuri Kozlov  <kozlov.y@gmail.com>

	* man/po4a/po/ru.po: Update.

Tue Jun  3 09:54:17 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/ru.po: Update with msgmerge.

Tue Jun  3 09:53:59 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/ru/translator.add: Add dummy file.

Tue Jun  3 00:07:47 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/ru.po: New from Translation Project (thanks, Yuri
	  Kozlov).
	* configure.ac (AC_CONFIG_FILES): Add man/ru/Makefile.
	* man/Makefile.am (MAYBE_PO4A_LINGUAS): Add ru.
	* man/ru/Makefile.am: New file.
	* man/po4a/Makefile.am (POFILES): Add po/ru.po.
	* man/po4a/po4a.cfg (po4a_langs): Add ru.
	* man/THANKS: Credit Yuri Kozlov with man/ru as well as ru.po.
	* .bzrignore: Add man/ru/man1, man/ru/man5, and man/ru/man8.

Sun Jun  1 16:40:12 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man8/mandb.man8 (SYNOPSIS): Document -t (thanks, Yuri Kozlov;
	  Debian bug #483951).

Sun Jun  1 04:01:12 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/whatis.man1 (SYNOPSIS): Document -v (thanks, Yuri Kozlov;
	  Debian bug #483862).

Fri May 30 00:11:15 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/manconv.man1 (SYNOPSIS), man/man1/manpath.man1
	  (SYNOPSIS): Document -h and -V here as well as in OPTIONS (thanks,
	  Yuri Kozlov; Debian bug #483589).

Sun May 25 18:51:47 BST 2008  Colin Watson  <cjwatson@debian.org>
