@@ -1,3 +1,8 @@
+Thu Jul 31 00:40:29 BST 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/catman.c (parse_for_sec): Fix initialisation of initial_bit
+	  (Coverity CID #28).
+
 Tue Jul 15 15:58:24 BST 2008  Clytie Siddall  <clytie@riverland.net.au>
 
 	* po/vi.po: Update from Translation Project.
